[package]
name = "rpsl"
version = "0.1.0-alpha.1"
resolver = "2"
edition = "2018"
authors = ["Ben Maddison <benm@workonline.africa>"]
description = "A parser for the Routing Policy Specification Language (RPSL)"
license = "MIT"
repository = "https://github.com/wolcomm/rpsl-rs"
readme = "README.md"
keywords = ["irr", "rpsl", "as-set", "route", "bgp"]
categories = ["network-programming", "database"]

[features]
arbitrary = ["proptest", "regex"]

[dependencies]
anyhow = "^1.0"
chrono = "^0.4"
ipnet = "^2.3"
log = "^0.4"
nom = "^7.0"
pest = "^2.1"
pest_derive = "^2.1"
proptest = {version = "^1.0", optional = true}
regex = {version = "^1.5", optional = true}
strum = {version = "^0.21", features = ["derive"]}

[dev-dependencies]
paste = "^1.0"
proptest = "^1.0"
regex = "^1.5"
version-sync = "^0.9"
