[package]
name = "rpsl"
version = "0.1.0-alpha.1"
resolver = "2"
edition = "2021"
authors = ["Ben Maddison <benm@workonline.africa>"]
description = "A parser for the Routing Policy Specification Language (RPSL)"
license = "MIT"
repository = "https://github.com/wolcomm/rpsl-rs"
readme = "README.md"
keywords = ["irr", "rpsl", "as-set", "route", "bgp"]
categories = ["network-programming", "database"]

[features]
arbitrary = ["paste", "proptest", "regex", "generic-ip/arbitrary"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
anyhow = "^1.0"
ipnet = "^2.3"
generic-ip = {path = "../generic-ip-rs"}
log = "^0.4"
paste = {version = "^1.0", optional = true}
pest = "^2.1"
pest_derive = "^2.1"
proptest = {version = "^1.0", optional = true}
ranges = "^0.3"
regex = {version = "^1.5", optional = true}
strum = {version = "^0.21", features = ["derive"]}
time = {version = "^0.3", features = ["formatting", "parsing", "macros"]}

[dev-dependencies]
generic-ip = {path = "../generic-ip-rs", features = ["arbitrary"]}
paste = "^1.0"
proptest = "^1.0"
regex = "^1.5"
version-sync = "^0.9"
